--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   }
   
   header {
-    background: #333;
+    background: linear-gradient(0, #e43d00, #ad0000);
     color: #fff;
     padding: 1rem 0;
     text-align: center;
@@ -38,7 +38,7 @@ body {
   }
   
   h2 {
-    border-bottom: 2px solid #333;
+    border-bottom: 2px solid #720000;
     padding-bottom: 10px;
   }
   
@@ -88,6 +88,11 @@ body {
     background: #000;
   }
   
+  .high-contrast h2 {
+    border-bottom: 2px solid #ffffff;
+    padding-bottom: 10px;
+  }
+  
   .high-contrast nav ul li a {
     color: #fff;
   }
@@ -100,6 +105,11 @@ body {
   
   .dark-mode header {
     background: #222;
+  }
+  
+  .dark-mode h2 {
+    border-bottom: 2px solid #ffffff;
+    padding-bottom: 10px;
   }
   
   .dark-mode nav ul li a {
