--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,25 @@ body {
     border: 2px solid #333;
   }
   
+  #videos {
+    text-align: center;
+    padding: 20px;
+  }
+
+  .video-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  .video-wrapper {
+    position: relative;
+    width: 100%;
+    max-width: 560px;
+    align-items: 16/9;
+  }
 
   @media (max-width: 768px) {
     nav ul li {
